# catnotcatdetector

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  infer.py  model.py  pyproject.toml  serialized_data.dvc  train.py
.dvc/: config
conf/: config.yaml
models/: model.ckpt.dvc  model.onnx.dvc
src/: config.py  dataset.py  datautils.py  init_serialized_data.py  main.py  model.py  runner.py
tests/: test_continuous_image_array.py
