[tool.poetry]
name = "catnotcatdetector"
version = "0.1.0"
description = "This module can differ cat and dogs"
authors = ["None"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"
wget = "^3.2"
scikit-learn = "^1.3.1"
numpy = "^1.21.4"
torch = {version = "2.0.1", source = "pytorch"}
torchvision = {version = "0.15.2", source = "pytorch"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pytest = "^7.4.2"

[tool.back]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
